Fix mobile submenus not showing all menu items

--- a/src/components/gds-menu-item-nested/gds-menu-item-nested.scss
+++ b/src/components/gds-menu-item-nested/gds-menu-item-nested.scss
@@ -92,7 +92,8 @@
     }
 
     .submenu {
-      max-height: 300px;
+      // Don't restrict max-height on mobile to show all items.
+      max-height: none;
     }
   }
 }
